# bevy_pen_tool

./: .gitignore  Cargo.toml  README.md  curve_groups.txt  curves.txt  group_lut.txt
assets/lut/: my_group_lut.txt
assets/meshes/: my_mesh.txt
assets/models/: car.gltf
assets/shaders/: bezier.frag  bezier.vert  bounding_box.frag  bounding_box.wgsl  button.frag  button.wgsl  controls.frag  controls.wgsl  ends.frag  ends.wgsl  fill_mesh.wgsl  mids.wgsl  road_mesh.wgsl  selecting.frag  selecting.wgsl  ui.frag  ui.wgsl
crates/bevy_pen_tool_plugin/: Cargo.toml
crates/bevy_pen_tool_plugin/assets/lut/: my_group_lut.txt
crates/bevy_pen_tool_plugin/assets/shaders/: bounding_box.wgsl  button.wgsl  controls.wgsl  fill_mesh.wgsl  road_mesh.wgsl  selecting.wgsl
crates/bevy_pen_tool_plugin/crates/bevy_pen_tool_model/: Cargo.toml
crates/bevy_pen_tool_plugin/crates/bevy_pen_tool_model/src/: lib.rs  materials.rs  mod.rs
crates/bevy_pen_tool_plugin/crates/bevy_pen_tool_model/src/inputs/: buttons.rs  inputs.rs
crates/bevy_pen_tool_plugin/crates/bevy_pen_tool_model/src/mesh/: material_mesh.rs  mesh_making.rs  mod.rs
crates/bevy_pen_tool_plugin/crates/bevy_pen_tool_model/src/model/: bezier.rs  group.rs  mod.rs  model_bezier.rs  model_group.rs  util.rs
crates/bevy_pen_tool_plugin/crates/bevy_pen_tool_model/src/spawner/: bezier_spawner.rs  mod.rs  others_spawner.rs  ui_spawner.rs
crates/bevy_pen_tool_plugin/crates/spawner/: Cargo.toml
crates/bevy_pen_tool_plugin/crates/spawner/src/: bezier_spawner.rs  lib.rs  mesh_making.rs  mod.rs  others_spawner.rs  road_mesh.rs  road_mesh_backup.rs
crates/bevy_pen_tool_plugin/crates/spawner/src/inputs/: inputs.rs  mod.rs
crates/bevy_pen_tool_plugin/crates/spawner/src/util/: util.rs
crates/bevy_pen_tool_plugin/examples/: blank.rs  breakout.rs  complex_test1.rs  delete_test.rs  latch_test.rs  latch_then_delete_test.rs  move_test.rs  redo_delete_latched_test.rs  redo_delete_test.rs  redo_latch_test.rs  redo_move_test.rs  redo_unlatch_test.rs  undo_delete_latched_test.rs  undo_delete_test.rs  undo_latch_test.rs  undo_latch_then_move_test.rs  undo_move_test.rs  undo_unlatch_test.rs  unlatch_test.rs
crates/bevy_pen_tool_plugin/saved/groups/: my_group0.group  my_group1.group  my_group2.group  my_group3.group
crates/bevy_pen_tool_plugin/saved/look_up_tables/: my_group1.lut  my_group2.lut  my_group3.lut
crates/bevy_pen_tool_plugin/src/: actions.rs  io.rs  lib.rs  moves.rs  pen.rs  plugin.rs  undo.rs
crates/bevy_pen_tool_plugin/src/inputs/: actions.rs  buttons.rs  inputs.rs  inputs_backup.rs  mesh_making.rs  mod.rs
crates/bevy_pen_tool_plugin/src/spawner/: bezier_spawner.rs  mesh_making.rs  mod.rs  others_spawner.rs  road_mesh.rs  road_mesh_backup.rs  ui_spawner.rs
crates/bevy_pen_tool_plugin/src/util/: materials.rs  mod.rs  util.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: lib.rs  moves.rs  plugin.rs
crates/utilities/src/inputs/: actions.rs  buttons.rs  inputs.rs
crates/utilities/src/spawner/: bezier_spawner.rs  others_spawner.rs  ui_spawner.rs
crates/utilities/src/util/: util.rs
examples/: mesh_making.rs  simple_animation.rs
saved/curves/: curves.txt
saved/groups/: buggy.group  my_group0.group
saved/look_up_tables/: buffy.lut  my_group0.lut
src/: cam.rs  main.rs  moves.rs  plugin.rs
src/inputs/: actions.rs  buttons.rs  inputs.rs  mod.rs
src/spawner/: bezier_spawner.rs  mod.rs  others_spawner.rs  ui_spawner.rs
src/util/: util.rs
