[package]
name = "bevy_pen_tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["crates/*"]

[dependencies]
bevy = { version = "0.5", git = "https://github.com/bevyengine/bevy", rev="615d43b", default-features = true }

bevy_pen_tool_plugin = { path = "crates/bevy_pen_tool_plugin", version = "0.1.0" }
serde_json = "1.0.59"
serde = { version = "1", features = ["derive"] }
lyon = "0.17.5"

bevy_prototype_debug_lines = {version  = "bevy-main"}

[[example]]
name = "simple_animation"
path = "examples/simple_animation.rs"


[[example]]
name = "mesh_making"
path = "examples/mesh_making.rs"