[package]
name = "bevy_pen_tool"
version = "0.1.0"
edition = "2018"
authors = ["Eliot Bolduc <eliot.bolduc@gmail.com>"]
categories = ["animation", "ui", "game-development", "mesh", "bezier-curves"]

[workspace]
members = ["crates/*"]

[dependencies]

# bevy = { version = "0.5", git = "https://github.com/bevyengine/bevy", rev="615d43b", default-features = true }
bevy = { version = "0.5", git = "https://github.com/bevyengine/bevy", rev="0887f41", default-features = true }
# bevy = { version = "0.5", default-features = false, features = ["render"] }

bevy_pen_tool_plugin = { path = "crates/bevy_pen_tool_plugin", version = "0.1.0" }
# bevy_prototype_debug_lines = { path  = "crates/bevy_debug_lines"}

serde_json = "1.0.59"
serde = { version = "1", features = ["derive"] }
lyon = "0.17.5"
rfd = "0.5.1"



[[example]]
name = "simple_animation"
path = "examples/simple_animation.rs"


[[example]]
name = "mesh_making"
path = "examples/mesh_making.rs"