[package]
name = "bevy_pen_tool"
version = "0.3.0"
edition = "2021"
authors = ["Eliot Bolduc <eliot.bolduc@gmail.com>"]
categories = ["animation", "ui", "game-development", "mesh", "bezier-curves"]

[workspace]
members = ["crates/*"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "6a1ba9c" }
bevy_pen_tool_plugin = { path = "crates/bevy_pen_tool_plugin", version = "0.3.0" }

serde_json = "1.0.59"
serde = { version = "1", features = ["derive"] }
lyon = "0.17.5"
rfd = "0.5.1"


[[example]]
name = "simple_animation"
path = "examples/simple_animation.rs"


[[example]]
name = "mesh_making"
path = "examples/mesh_making.rs"