[package]
name = "bevy_pen_tool_plugin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.5", git = "https://github.com/bevyengine/bevy", rev="615d43b", default-features = true }
# bevy = { version = "0.5", default-features = false, features = ["render"] }
bevy = { version = "0.5", git = "https://github.com/bevyengine/bevy", rev="0887f41", default-features = true }
# strum  = "0.21.0"
# strum_macros = "0.21"
flo_curves = "0.5"
serde_json = "1.0.59"
itertools = "0.10.1"
serde = { version = "1", features = ["derive"] }
rand = "0.8.0"
plotlib = "0.5.1"
lyon = "0.17.5"
obj-exporter = "0.2.0"
rfd = "0.5.1"