[package]
name = "bevy_pen_tool_model"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "6a1ba9c" }
bevy = "0.8"
flo_curves = "0.5"
serde_json = "1.0.59"
itertools = "0.10.1"
serde = { version = "1", features = ["derive"] }
rand = "0.8.0"
plotlib = "0.5.1"
lyon = "0.17.5"
obj-exporter = "0.2.0"
rfd = "0.5.1"
bevy-inspector-egui = "0.12"
bevy_obj = "0.8"


